<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CartListActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_list_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:layout_margin="24dp"
        android:contentDescription="@string/cart_list_settings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_list_refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_refresh_24"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/refresh"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/cart_list_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_list"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="5sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_list_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</RelativeLayout>



